<resources>
    <string name="app_name">رژیم کرفس</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_forgot_pass">ForgotPassActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="type_account">ir.eynakgroup.karafs.account</string>
    <string name="label_account">کرفس</string>
    <string name="action_authentication">karafs.authentication</string>
    <string name="title_intro1">به رژیم کرفس خوش آمدید.</string>
    <string name="des_intro1">با استفاده از این اپلیکیشن می‌توانید به سادگی و در کمترین زمان به وزن ایده‌آل خود رسیده و در حین این پروسه، سلامت و نشاط خود را حفظ نمایید.</string>
    <string name="title_intro2">رژیم کرفس چگونه کار می‌کند؟</string>
    <string name="des_intro2">رژیم کرفس، بر اساس تحلیل و آنالیز داده‌های برنامه کالری شمار کرفس جمع‌آوری شده است و با بهره‌گیری از الگوریتم‌های یادگیری ماشین، رژیم‌های متناسب با ویژگی‌های فردی کاربر ارائه می‌دهد.</string>
    <string name="title_intro3">امکان همگام‌سازی با برنامه کرفس</string>
    <string name="des_intro3">شما می‌توانید با حساب کاربری کرفس، علاوه بر عدم نیاز به ثبت‌نام دوباره، اطلاعات برنامه غذایی خود را با برنامه کالری شمار کرفس همگام‌ سازید.</string>
    <string name="enter_app">ورود به برنامه</string>
    <string name="sign_in_karafs">ورود با اکانت کرفس</string>
    <string name="sign_up">ثبت‌نام</string>
    <string name="enter">ورود</string>
    <string name="password_forgot">رمز عبور خود را فراموش کرده‌اید؟</string>
    <string name="phone">تلفن</string>
    <string name="password">رمز عبور</string>
    <string name="phone_input">بایستی شماره تلفن همراه خود را وارد کنید.</string>
    <string name="phone_error">شماره تلفن همراه اشتباه است.</string>
    <string name="pass_input">بایستی رمز عبور خود را وارد کنید.</string>
    <string name="pass_error">رمز عبور باید حداقل ۴ کاراکتر شامل یک حرف و یک عدد باشد.</string>
    <string name="create_status">Adding account: %1$s</string>
    <string name="next_step">مرحله بعد</string>
    <string name="sign_up_submit">تکمیل ثبت‌نام</string>
    <string name="reg_1">نام خود را وارد کنید.</string>
    <string name="reg_2">جنسیت شما کدام است؟</string>
    <string name="reg_3">تاریخ تولد خود را وارد کنید.</string>
    <string name="reg_4">قد شما چند سانتی‌متر است؟</string>
    <string name="reg_5">وزن شما چند کیلوگرم است؟</string>
    <string name="reg_6">سطح فعالیت روزانه شما چگونه است؟</string>
    <string name="reg_7">آیا به بیماری‌(های) خاص مبتلا هستید؟‌‌</string>
    <string name="reg_8">اطلاعات ورود</string>
    <string name="first_name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="female">خانم</string>
    <string name="male">آقا</string>
    <string name="very_low">خیلی کم</string>
    <string name="low">کم</string>
    <string name="normal">متوسط</string>
    <string name="high">زیاد</string>
    <string name="very_high">خیلی زیاد</string>
    <string name="kidney_disease">بیماری کلیوی</string>
    <string name="heart_disease">بیماری قلبی</string>
    <string name="fat_disease">چربی خون</string>
    <string name="diabetes_disease">دیابت</string>
    <string name="phone_number">شماره تلفن همراه</string>
    <string name="password_repeat">تکرار رمز عبور</string>
    <string name="privacy">حریم خصوصی</string>
    <string name="terms">قوانین استفاده</string>
    <string name="policy">با کلیک بر روی دکمه تکمیل ثبت‌نام، شما تایید می‌کنید که قوانین استفاده و حریم خصوصی سرویس‌های کرفس را مطالعه کرده و از آن‌ها پیروی خواهید کرد.</string>
    <string name="reg1_error">نام و نام خانوادگی خود را وارد کنید.</string>
    <string name="reg2_error">یک گزینه را انتخاب کنید.</string>
    <string name="reg3_error">تاریخ تولد خود را وارد کنید.</string>
    <string name="reg4_error">مقدار قد اشتباه است.</string>
    <string name="reg5_error">مقدار وزن اشتباه است.</string>
    <string name="reg6_error">سطح فعالیت خود را انتخاب کنید.</string>
    <string name="reg8_phone_error">شماره تلفن اشتباه است.</string>
    <string name="reg8_password_error">رمز عبور اشتباه است.</string>
    <string name="forgot_pass_description">برای بازیابی رمز عبور خود، لطفاً شماره تلفنی که با آن ثبت‌نام کرده‌ بودید را وارد نمایید.</string>
    <string name="recovery_code">کد بازیابی حساب</string>
    <string name="recovery_code_description">برای شماره تلفن همراه شما کد ۶ رقمی ارسال شده است، با وارد نمودن آن در فیلد زیر رمز عبور خود را بازیابی کنید.</string>
    <string name="recovery_pass">بازیابی رمز عبور</string>
    <string name="recovery_pass_description">شما می‌توانید از طریق فرم زیر اقدام به ایجاد رمز عبور جدید برای حساب کاربری خود نمایید.</string>
    <string name="re_pass">تکرار رمز عبور</string>
    <string name="code_send">ارسال کد</string>
    <string name="code">کد ۶ رقمی</string>
    <string name="code_error">کد اشتباه است.</string>
    <string name="recovery_submit">ثبت</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string-array name="months">
        <item>فروردین</item>
        <item>اردیبهشت</item>
        <item>خرداد</item>
        <item>تیر</item>
        <item>مرداد</item>
        <item>شهریور</item>
        <item>مهر</item>
        <item>آبان</item>
        <item>آذر</item>
        <item>دی</item>
        <item>بهمن</item>
        <item>اسفند</item>
    </string-array>
    <string name="trial_usage">استفاده از هدیه</string>
    <string name="trial_tile">ده روز هدیه رایگان ویژه الکامپ</string>
    <string name="trial_description">پیش از پرداخت اشتراک رژیم کرفس، می‌توانید در بازه زمانی ده روزه از شروع نمایشگاه الکامپ، از تمامی امکانات این برنامه به صورت رایگان و بدون محدودیت بهره‌مند شوید.</string>
    <string name="diet_avatar">رژیم کرفس</string>
    <string name="diet_typing">... typing</string>
    <string name="exit_alert">با خروج از این بخش رژیم شما آغاز نخواهد شد.</string>
    <string name="exit_cancel">ادامه میدم</string>
    <string name="ok">باشه</string>
    <string name="no_diet">شما کمبود وزن دارین و بهتر است رژیم افزایش وزن بگیرین. در حال حاضر پیشنهادی برای شما ندارم.</string>
    <string name="price_1">۱۰ هزار تومان</string>
    <string name="price_2">۱۸ هزار تومان</string>
    <string name="price_3">۲۵ هزار تومان</string>
    <string name="price_4">۳۴ هزار تومان</string>
    <string name="price_5">۴۰ هزار تومان</string>
    <string name="price_6">۴۵ هزار تومان</string>
    <string name="diet">رژیم</string>
    <string name="dialog_purchase_message">برای شروع رژیم، ابتدا باید حساب کاربری خود را شارژ کنید.</string>
    <string name="dialog_diet_message">برای دریافت رژیم غذایی ۱ رژیم از حساب کاربری شما کم خواهد شد.</string>
    <string-array name="date_spinner_array">
        <item>امروز</item>
        <item>فردا</item>
        <item>پس‌فردا</item>
    </string-array>
    <string name="breakfast">صبحانه</string>
    <string name="lunch">ناهار</string>
    <string name="dinner">شام</string>
    <string name="snack">میان‌وعده</string>
    <string name="choose_one_option">یکی از گزینه‌های زیر را انتخاب کنید.</string>
    <string name="choose">انتخاب</string>
    <string name="didnt_adhere">این وعده را رعایت نکردم.</string>
    <string name="bmi">شاخص توده بدنی</string>
    <string name="diet_number">رژیم باقی‌مانده</string>
    <string name="total_point">جمع امتیاز</string>
    <string name="wait">صبر کنید ...</string>
    <string name="trial_elecomp">رژیم آزمایشی ویژه نمایشگاه الکامپ</string>
</resources>