<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efeeee"
    android:fitsSystemWindows="true"
    tools:context="ir.eynakgroup.diet.activities.fragments.ProfileFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#efeeee"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:weightSum="4.75"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="right"
            android:background="@color/colorStatusBar"
            android:gravity="right"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/date_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/appbar_padding_top">

                </android.support.v7.widget.AppCompatSpinner>
            </RelativeLayout>


        </android.support.v7.widget.Toolbar>
        <android.support.design.widget.TabLayout
            android:id="@+id/meals_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorStatusBar"
            app:tabTextColor="@color/colorWhite"
            app:tabSelectedTextColor="@color/colorWhite"
            app:tabIndicatorColor="#3999d4"
            app:tabMode="fixed"
            app:tabGravity="fill">

            <android.support.design.widget.TabItem android:text="@string/dinner"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <android.support.design.widget.TabItem android:text="@string/snack"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <android.support.design.widget.TabItem android:text="@string/lunch"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <android.support.design.widget.TabItem android:text="@string/breakfast"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </android.support.design.widget.TabLayout>
        <ir.eynakgroup.diet.utils.view.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/choose_one_option"
            android:textColor="@color/colorStatusBar"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:textSize="@dimen/normal_text_size" />

    </android.support.design.widget.AppBarLayout>



    <android.support.v4.view.ViewPager
        android:id="@+id/meals_tab_viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"  />


</android.support.design.widget.CoordinatorLayout>

