<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/indicator_padding"
        android:layout_marginTop="@dimen/button_margin"
        android:background="@drawable/background_button"
        android:text="@string/enter"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_password_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_enter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/password_forgot"
        android:clickable="true"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/txt_password_forgot"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_orientation_margin"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInput1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/txtInput2"
        android:layout_centerHorizontal="true"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>