<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal|bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_orientation_margin"
    android:paddingLeft="@dimen/activity_orientation_margin"
    android:paddingRight="@dimen/activity_orientation_margin"
    android:paddingTop="@dimen/activity_orientation_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ir.eynakgroup.diet.activities.ForgotPassActivity$PlaceholderFragment">

    <ir.eynakgroup.diet.utils.view.CustomTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTitle"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ir.eynakgroup.diet.utils.view.JustifiedTextView xmlns:eynak="http://eynakgroup.ir"
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin"
        android:padding="25dp"
        eynak:textColor="@color/colorDescription"
        eynak:textSize="16dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInput1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_orientation_margin"
        android:visibility="invisible"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="80dp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_button_stroke"
        android:text="@string/next_step"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />
</LinearLayout>