<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_orientation_margin"
    android:paddingLeft="@dimen/activity_orientation_margin"
    android:paddingRight="@dimen/activity_orientation_margin"
    android:paddingTop="@dimen/activity_orientation_margin"
    tools:context=".activities.SignUpActivity$PlaceholderFragment">


    <include
        android:id="@+id/title"
        layout="@layout/layout_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_orientation_margin_2x"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.5">

        <ir.eynakgroup.diet.utils.view.ToggleButtonGroupTableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <TableRow>

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:button="@null"
                    android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
                    android:visibility="invisible" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_margin"
                    android:layout_marginRight="@dimen/button_margin"
                    android:background="@drawable/background_radio_button"
                    android:button="@null"
                    android:buttonTint="@color/colorEditText"
                    android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
                    android:paddingLeft="@dimen/activity_orientation_margin"
                    android:paddingRight="@dimen/activity_orientation_margin"
                    android:text="@string/low"
                    android:textColor="@color/colorDescription" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_very_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_margin"
                    android:background="@drawable/background_radio_button"
                    android:button="@null"
                    android:buttonTint="@color/colorEditText"
                    android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
                    android:paddingLeft="@dimen/activity_orientation_margin"
                    android:paddingRight="@dimen/activity_orientation_margin"
                    android:text="@string/very_low"
                    android:textColor="@color/colorDescription" />
            </TableRow>

            <TableRow>

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:button="@null"
                    android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
                    android:visibility="invisible" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_margin"
                    android:layout_marginRight="@dimen/button_margin"
                    android:background="@drawable/background_radio_button"
                    android:button="@null"
                    android:buttonTint="@color/colorEditText"
                    android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
                    android:paddingLeft="@dimen/activity_orientation_margin"
                    android:paddingRight="@dimen/activity_orientation_margin"
                    android:text="@string/high"
                    android:textColor="@color/colorDescription" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_margin"
                    android:background="@drawable/background_radio_button"
                    android:button="@null"
                    android:buttonTint="@color/colorEditText"
                    android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
                    android:paddingLeft="@dimen/activity_orientation_margin"
                    android:paddingRight="@dimen/activity_orientation_margin"
                    android:text="@string/normal"
                    android:textColor="@color/colorDescription" />

            </TableRow>

            <TableRow>

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:button="@null"
                    android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
                    android:visibility="invisible" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:button="@null"
                    android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
                    android:visibility="invisible" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_very_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_margin"
                    android:background="@drawable/background_radio_button"
                    android:button="@null"
                    android:buttonTint="@color/colorEditText"
                    android:drawableLeft="?android:attr/listChoiceIndicatorSingle"
                    android:paddingLeft="@dimen/activity_orientation_margin"
                    android:paddingRight="@dimen/activity_orientation_margin"
                    android:text="@string/very_high"
                    android:textColor="@color/colorDescription" />

            </TableRow>

        </ir.eynakgroup.diet.utils.view.ToggleButtonGroupTableLayout>

    </RelativeLayout>

</LinearLayout>
